[gd_scene load_steps=17 format=3 uid="uid://clj187kbugegt"]

[ext_resource type="Script" uid="uid://bxml40wt66vvx" path="res://Scripts/Enemy/enemy.gd" id="1_24xp8"]
[ext_resource type="Texture2D" uid="uid://5qx3ywvqdbk6" path="res://Aseprite/Animacions/Enemy/enemyAnimations.png" id="4_8gslv"]
[ext_resource type="Texture2D" uid="uid://cgamlbod7hf2n" path="res://Aseprite/GUI/HealthBar/HealthBar1.png" id="9_nk20g"]
[ext_resource type="Texture2D" uid="uid://y3hjnswly20l" path="res://Aseprite/GUI/HealthBar/BackgroundVida.png" id="11_odl14"]

[sub_resource type="Animation" id="Animation_cmeoc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyWeapon/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kba6k"]
resource_name = "enemy_basic1"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.666667, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyWeapon/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.233333, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_10wo1"]
resource_name = "enemy_death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_i5tp4"]
resource_name = "enemy_hurt"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_rikk5"]
resource_name = "enemy_idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47, 48, 49]
}

[sub_resource type="Animation" id="Animation_rb7g2"]
resource_name = "enemy_walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bde0w"]
_data = {
&"RESET": SubResource("Animation_cmeoc"),
&"enemy_basic1": SubResource("Animation_kba6k"),
&"enemy_death": SubResource("Animation_10wo1"),
&"enemy_hurt": SubResource("Animation_i5tp4"),
&"enemy_idle": SubResource("Animation_rikk5"),
&"enemy_walk": SubResource("Animation_rb7g2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_287tu"]
size = Vector2(28, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0830c"]
size = Vector2(9.33333, 18.6667)

[sub_resource type="CircleShape2D" id="CircleShape2D_r6o5s"]
radius = 36.0139

[sub_resource type="CircleShape2D" id="CircleShape2D_g5frt"]
radius = 121.413

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qfpvj"]
radius = 12.0
height = 38.0

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource("1_24xp8")

[node name="Background" type="Sprite2D" parent="."]
process_mode = 1
position = Vector2(0, -18)
scale = Vector2(0.25, 0.25)
texture = ExtResource("11_odl14")

[node name="HealthBar" type="Sprite2D" parent="."]
process_mode = 1
position = Vector2(0, -18)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_nk20g")

[node name="EnemySprite" type="Sprite2D" parent="."]
process_mode = 1
texture = ExtResource("4_8gslv")
hframes = 10
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 1
libraries = {
&"": SubResource("AnimationLibrary_bde0w")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
process_mode = 1
position = Vector2(0, 2)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_287tu")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="EnemyHitBox" type="Area2D" parent="."]
process_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBox"]
position = Vector2(0, 2)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_0830c")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="EnemyDealDamageArea" type="Area2D" parent="."]
process_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDealDamageArea"]
scale = Vector2(0.75, 0.75)
shape = SubResource("CircleShape2D_r6o5s")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="EnemyChase" type="Area2D" parent="."]
process_mode = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EnemyChase"]
shape = SubResource("CircleShape2D_g5frt")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="EnemyWeapon" type="Area2D" parent="."]
process_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyWeapon"]
position = Vector2(18, 0)
scale = Vector2(0.75, 0.75)
shape = SubResource("CapsuleShape2D_qfpvj")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="DirectionTimer" type="Timer" parent="."]
process_mode = 1
autostart = true

[node name="MovingTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 7.5
autostart = true

[node name="RayCastR" type="RayCast2D" parent="."]
position = Vector2(14, 0)
target_position = Vector2(0, 17.5)

[node name="RayCastL" type="RayCast2D" parent="."]
position = Vector2(-14, 0)
target_position = Vector2(0, 17.5)

[connection signal="area_entered" from="EnemyHitBox" to="." method="_on_enemy_hit_box_area_entered"]
[connection signal="area_entered" from="EnemyDealDamageArea" to="." method="_on_enemy_deal_damage_area_area_entered"]
[connection signal="area_exited" from="EnemyDealDamageArea" to="." method="_on_enemy_deal_damage_area_area_exited"]
[connection signal="area_entered" from="EnemyChase" to="." method="_on_enemy_chase_area_entered"]
[connection signal="area_exited" from="EnemyChase" to="." method="_on_enemy_chase_area_exited"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="timeout" from="MovingTimer" to="." method="_on_moving_timer_timeout"]
